--- a/.github/workflows/tests.js.yml
+++ b/.github/workflows/tests.js.yml
@@ -14,14 +14,14 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x]
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Check out code
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - name: Set up node
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm run test:unit
+        node-version: 13
+    - name: Run tests
+      run: yarn && yarn test:unit
