--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "vue-jest": "^5.0.0-alpha.0"
   },
   "peerDependencies": {
-    "@vue/compiler-sfc": "^3.0.0-beta.12",
-    "formvuelatte": "^2.0.0-alpha.1",
+    "formvuelatte": "^2.0.0-beta.1",
     "vue": "^3.0.0-beta.12"
   },
   "files": [
