--- a/.github/workflows/tests.js.yml
+++ b/.github/workflows/tests.js.yml
@@ -23,7 +23,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 13
+    - name: Yarn
+      run: yarn
     - name: Lint
       run: yarn lint
     - name: Run tests
-      run: yarn && yarn test:unit
+      run: yarn test:unit
