--- a/.github/workflows/tests.js.yml
+++ b/.github/workflows/tests.js.yml
@@ -29,3 +29,5 @@ jobs:
       run: yarn lint
     - name: Run tests
       run: yarn test:unit
+    - name: Codecov
+      uses: codecov/codecov-action@v1.0.7
