feat: add lint and codecov (#4)
* move specs to unit folder

* add eslint and config

* add lint to ci

* add yarn step to workflow

* feat: add codecov (#5)

* add codecov to workflow

* add codecov yml

* set require base to no

* add missing newline

Co-authored-by: Tonina <zhelyazkova.tonina@gmail.com>

--- a/.github/workflows/tests.js.yml
+++ b/.github/workflows/tests.js.yml
@@ -23,5 +23,11 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 13
+    - name: Yarn
+      run: yarn
+    - name: Lint
+      run: yarn lint
     - name: Run tests
-      run: yarn && yarn test:unit
+      run: yarn test:unit
+    - name: Codecov
+      uses: codecov/codecov-action@v1.0.7
