--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.9.0",
-    "@vue/test-utils": "^2.0.0-alpha.6",
+    "@vue/test-utils": "^2.0.0-alpha.7",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.2.6",
     "eslint": "^7.3.1",
@@ -34,6 +34,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "formvuelatte": "^2.0.0-beta.2",
     "jest": "^26.0.1",
     "rollit": "^0.0.9",
     "vue": "^3.0.0-beta.12",
