--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@formvuelatte/plugin-lookup",
-  "version": "1.1.2",
+  "version": "v1.2.0",
   "description": "FormVueLatte Lookup plugin",
   "main": "dist/formvuelatte-plugin-lookup.cjs.js",
   "private": false,
@@ -41,7 +41,7 @@
     "vue-jest": "^5.0.0-alpha.0"
   },
   "peerDependencies": {
-    "formvuelatte": "^2.0.0-beta.1",
+    "formvuelatte": "^2.0.0-beta.2",
     "vue": "^3.0.0-beta.12"
   },
   "files": [
