--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@formvuelate/plugin-lookup",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "FormVueLate Lookup plugin",
   "main": "dist/formvuelate-plugin-lookup.cjs.js",
   "private": false,
@@ -34,15 +34,15 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "formvuelate": "^2.0.0-beta.3",
+    "formvuelate": "^2.0.0",
     "jest": "^26.0.1",
     "rollit": "^0.0.9",
-    "vue": "^3.0.0-beta.12",
+    "vue": "^3.0.0",
     "vue-jest": "^5.0.0-alpha.0"
   },
   "peerDependencies": {
-    "formvuelate": "^2.0.0-beta.3",
-    "vue": "^3.0.0-beta.12"
+    "formvuelate": "^2.0.0",
+    "vue": "^3.0.0"
   },
   "files": [
     "src/*",
