--- a/package.json
+++ b/package.json
@@ -34,14 +34,14 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "formvuelate": "^2.0.0",
+    "formvuelate": "^3.0.0-beta.4",
     "jest": "^26.0.1",
     "rollit": "^0.0.9",
     "vue": "^3.0.0",
     "vue-jest": "^5.0.0-alpha.0"
   },
   "peerDependencies": {
-    "formvuelate": "^2.0.0",
+    "formvuelate": "^3.0.0",
     "vue": "^3.0.0"
   },
   "files": [
