--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.9.0",
-    "@vue/test-utils": "^2.0.0-alpha.7",
+    "@vue/test-utils": "^2.0.0-0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.2.6",
     "eslint": "^7.3.1",
@@ -37,7 +37,7 @@
     "formvuelate": "^3.0.0",
     "jest": "^26.0.1",
     "rollit": "^0.0.9",
-    "vue": "^3.0.0",
+    "vue": "^3.0.6",
     "vue-jest": "^5.0.0-alpha.0"
   },
   "peerDependencies": {
