--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@formvuelate/plugin-lookup",
-  "version": "1.2.3",
+  "version": "2.0.0",
   "description": "FormVueLate Lookup plugin",
   "main": "dist/formvuelate-plugin-lookup.cjs.js",
   "private": false,
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.9.0",
-    "@vue/test-utils": "^2.0.0-alpha.7",
+    "@vue/test-utils": "^2.0.0-0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.2.6",
     "eslint": "^7.3.1",
@@ -34,14 +34,14 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "formvuelate": "^2.0.0",
+    "formvuelate": "^3.0.0",
     "jest": "^26.0.1",
     "rollit": "^0.0.9",
-    "vue": "^3.0.0",
+    "vue": "^3.0.6",
     "vue-jest": "^5.0.0-alpha.0"
   },
   "peerDependencies": {
-    "formvuelate": "^2.0.0",
+    "formvuelate": "^3.0.0",
     "vue": "^3.0.0"
   },
   "files": [
