--- a/.github/workflows/tests.js.yml
+++ b/.github/workflows/tests.js.yml
@@ -20,9 +20,9 @@ jobs:
       with:
         fetch-depth: 0
     - name: Set up node
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2
       with:
-        node-version: 13
+        node-version: '14.x'
     - name: Yarn
       run: yarn
     - name: Lint
